хз, вроде main готов

--- a/html/index.html
+++ b/html/index.html
@@ -62,10 +62,19 @@
                     </a>
                 </nav>
                 <div class="burger_menu">
-                    <a href="">
-                        <img src="../image/logo.svg" alt="" class="header_logo_mobile">
+                    <a href="" class="header_logo_mobile">
+                        <img src="../image/logo.svg" alt="">
                         <p>Твой-дом.by</p>
                     </a>
+
+
+                    <div class="header_soc_net">
+                        <a href=""><img src="../image/whatapp.svg" alt=""></a>
+                        <a href="https://t.me/FilipovichDmitry"><img src="../image/telegram.svg" alt=""></a>
+                        <a href="viber://chat?number=%2B375293279026"><img src="../image/viber_header.svg" alt=""></a>
+                    </div>
+
+
                     <div class="burger_bottom">
                         <span></span>
                         <span></span>
@@ -73,7 +82,8 @@
                     </div>
                     <nav class="burger_list">
                         <a href="">
-                            <p><img src="../image/logo.svg" alt="" class="header_logo"> ГЛАВНАЯ</p>
+                            <p><img src="../image/logo.svg" alt="" class="header_logo">Твой-дом.by
+                            </p>
                         </a>
                         <a href="">
                             <p>О НАС</p>
@@ -110,6 +120,21 @@
                         <a href="">
                             <p>и т.д.</p>
                         </a>
+                        <div class="down_burger_list">
+                            <p> Звонки и сообщения</p>
+                            <p>Пн-Пт: 9:00-18:00</p>
+                            <p>Сб: 9:00-16:00</p>
+                            <p>Вс: выходной</p>
+                        </div>
+                        <p> <a href="tel:+375(29)1234567">+375 (29) 123-45-67</a> - заказать сейчас</p>
+                        <div class="down_burger_soc_net">
+                            <a href=""><img src="../image/whatapp.svg" alt=""></a>
+                            <a href="https://t.me/FilipovichDmitry"><img src="../image/telegram.svg" alt=""></a>
+                            <a href="viber://chat?number=%2B375293279026"><img src="../image/viber_header.svg"
+                                    alt=""></a>
+                        </div>
+                        <div class="wtfk"></div>
+
                     </nav>
                 </div>
 
@@ -281,7 +306,8 @@
                         <div class="row">
                             <div class="long_b_in_b">
                                 <a href="">
-                                    <img src="../image/long_block.png" alt="">
+                                    <img src="../image/long_block.png" alt="" class="long_block">
+                                    <img src="../image/long_block_mobile.JPG" alt="" class="long_block_now_little">
                                     <p class="item_name_block">Заборы из профнастила </p>
                                     <p class="item_cost_block">от 70 руб/пог.</p>
                                 </a>
