каталог, хуле (надо доделать)

--- a/html/index.html
+++ b/html/index.html
@@ -3,18 +3,19 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>title</title>
+    <title>Главня</title>
+    <link rel="stylesheet" href="../scss/header.css">
+    <link rel="stylesheet" href="../scss/footer.css">
+    <link rel="stylesheet" href="../scss/main.css">
+    <style>
+        @font-face {
+            font-family: "Monserrat";
+            src: url(../fonts/static/Montserrat-Italic.ttf) format('ttf');
+        }
+    </style>
 </head>
-<link rel="stylesheet" href="../scss/header.css">
-<link rel="stylesheet" href="../scss/media.css">
-<link rel="stylesheet" href="../scss/footer.css">
-<link rel="stylesheet" href="../scss/main.css">
-<style>
-    @font-face {
-        font-family: "Monserrat";
-        src: url(../fonts/static/Montserrat-Italic.ttf) format('ttf');
-    }
-</style>
+
+
 
 <body>
     <header>
